welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:24: error: expected class or object definition
 def isFacingTrail(c:Color):Boolean  {
 ^SlugSnail:44: error: Unmatched closing brace '}' ignored here
}
^